kube-qa-portal/cluster-state/report-portal/raw-manifests/elastic.yaml
# Source: reportportal/templates/elasticsearch-statefulset.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: elasticsearch
  labels:     
    app: "cautious-bison"
spec:
  replicas: 1
  selector:
    matchLabels:
      component: reportportal-elasticsearch
  serviceName: elasticsearch
  template:
    metadata:
      labels:
        component: reportportal-elasticsearch
    spec:
      containers:
      - image: "docker.elastic.co/elasticsearch/elasticsearch-oss:6.1.1"
        name: elasticsearch
        
---

# Source: reportportal/templates/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:     
    app: "cautious-bison"
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    protocol: TCP
    targetPort: 55555
  selector:
    component: reportportal-elasticsearch
  type: ClusterIP
---
